Move getEntry endpoint to filter for getEntries, working persistent details panel
