# docs/swagger.yaml
@@ -21,6 +21,8 @@ definitions:
         items:
           $ref: '#/definitions/controller.BrowseResponseFolder'
         type: array
+      parent:
+        type: string
       path:
         type: string
     type: object
@@ -348,6 +350,11 @@ paths:
         in: query
         name: parent
         type: string
+      - description: The entry path. If this value is set, all other parameters are
+          ignored and a maximum of 1 value is returned.
+        in: query
+        name: path
+        type: string
       - description: The library id
         in: path
         name: libraryId
@@ -422,30 +429,6 @@ paths:
       security:
       - OAuth2: []
       summary: Delete a file or folder
-      tags:
-      - Files
-    get:
-      parameters:
-      - description: The url encoded path
-        in: path
-        name: path
-        required: true
-        type: string
-      - description: The library id
-        in: path
-        name: libraryId
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/service.FileInfo'
-      security:
-      - OAuth2: []
-      summary: Search the collection of files and folders
       tags:
       - Files
   /api/libraries/{libraryId}/entries/{path}/download:
